[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description="A mock-application for programs that spawn subprocesses."
homepage = "https://github.com/sharkdp/lucid"
license = "MIT/Apache-2.0"
name = "lucid"
version = "0.1.0"
repository = "https://github.com/sharkdp/lucid"


[dependencies.ctrlc]
version = "3.0"
features = ["termination"]

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]
