[package]
authors = ["David Peter <mail@david-peter.de>"]
categories = ["command-line-utilities"]
description = "A mock-application for programs that spawn subprocesses."
homepage = "https://github.com/sharkdp/lucid"
license = "MIT/Apache-2.0"
name = "lucid"
readme = "README.md"
repository = "https://github.com/sharkdp/lucid"
version = "0.3.0"

[dependencies]
nix = "0.14"

[dependencies.ctrlc]
version = "3.1"
features = ["termination"]

[dependencies.clap]
version = "2"
features = ["suggestions", "color", "wrap_help"]
